# atomic-engine

./: .gitignore  EXTENSION_USAGE.md  FRONTEND_ARCHITECTURE.md  GITHUB_HANDOFF.md  PUBLISHING_GUIDE.md  README.md  USAGE_GUIDE.md  USER_INSTALL_GUIDE.md  test_viz.cpp
AtomicTree/: .gitignore  DISTRIBUTION_SUMMARY.md  demo_telemetry.cpp
AtomicTree/backend/: benchmark_results.csv
AtomicTree/docs/: QA_TEST_PLAN.md
AtomicTree/extension/: package.json
AtomicTree/frontend/: index.html
backend/: CMakeLists.txt  COMPILER_SETUP.md  RESTART_TERMINAL.md  build.bat  main.cpp
backend/include/: B_tree.h  B_tree_improved.h  allocator.h  b_tree.h  garbage_collector.h  manager.h  primitives.h  wort.h
backend/src/: B_tree.cpp  B_tree_improved.cpp  allocator.cpp  b_tree.cpp  manager.cpp  primitives.cpp  wort.cpp
backend/tests/: crash_consistency_test.cpp  crash_test.cpp  plot_results.py  speed_test.cpp  stress_test.cpp  test_delete.cpp  viz_demo.cpp
basiclevel/include/: B_tree.h  garbage_collector.h  manager.h  primitives.h
docs/: API.md  ARCHITECTURE.md  PROJECT_HANDBOOK.md  QA_TEST_REPORT.md  WALKTHROUGH.md
examples/: my_custom_code.cpp  simple_loop.cpp
extension/: LICENSE.md  README.md  atomic-tree-engine-1.1.4.vsix  atomic-tree-engine-1.1.5.vsix  atomic-tree-engine-1.1.6.vsix  atomic-tree-engine-1.1.7.vsix  atomic-tree-engine-1.1.8.vsix  atomic-tree-engine-1.1.9.vsix  design_document.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
(+40 files in other folders)
